--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,11 @@ edition = "2021"
 
 [dependencies]
 lazy_static = "1.4.0"
+logos = {version = "0.12.0", optional = true}
+
+[features]
+default = ["scanner_clike"]
+
+scanner_clike = []
+scanner_rusty = []
+scanner_logos = ["dep:logos"]
