--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 lazy_static = "1.4.0"
 logos = {version = "0.12.0", optional = true}
+thiserror = "1.0.30"
 
 [features]
 default = ["scanner_clike"]
